--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -21,6 +21,7 @@
 @import "blocks/ad";
 @import "blocks/chat";
 // @import "blocks/question-item";
+ @import "blocks/questions";
 @import "blocks/participants";
 @import "blocks/search-form";
 @import "blocks/participants-table";
