--- a/resources/assets/less/blocks/participants-table.less
+++ b/resources/assets/less/blocks/participants-table.less
@@ -40,6 +40,8 @@
 
 .participants-table__avatar {
     margin-right: 17px;
+    width: 36px;
+    border-radius: 50%;
 }
 
 .participants-table__number {
