--- a/resources/assets/less/blocks/structure.less
+++ b/resources/assets/less/blocks/structure.less
@@ -51,6 +51,11 @@
     }
 }
 
+.structure__text {
+    margin-bottom: 30px;
+    font-size: 14px;
+}
+
 .structure__section {
     display: inline-flex;
     align-items: center;
