--- a/resources/assets/less/blocks/program-header.less
+++ b/resources/assets/less/blocks/program-header.less
@@ -114,6 +114,7 @@
         line-height: 1;
         letter-spacing: 0.3px;
         border: 1px solid transparent;
+        &.active,
         &:hover {
             text-decoration: none;
             color: #2c2c2c;
