--- a/resources/assets/less/blocks/event.less
+++ b/resources/assets/less/blocks/event.less
@@ -1,14 +1,18 @@
-.event {
+.events {
     padding: 48px 74px 48px 25px;
 }
 
-.event__heading {
+.events-item {
+    margin-bottom: 40px;
+}
+
+.events-item__heading {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.event__heading-icon {
+.events-item__heading-icon {
     width: 18px;
     height: 17px;
     margin-right: 21px;
@@ -16,7 +20,7 @@
     color: #c4d0dd;
 }
 
-.event__heading-desc {
+.events-item__heading-desc {
     color: #a8b0bd;
     font-size: 12px;
     font-weight: 400;
@@ -24,15 +28,15 @@
     letter-spacing: 0.12px;
 }
 
-.event__title {
+.events-item__title {
     margin-left: 40px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     color: #000000;
     font-size: 16px;
     font-weight: 400;
 }
 
-.event__text {
+.events-item__text {
     margin-left: 40px;
     color: #7b7b7b;
     font-size: 14px;
