--- a/resources/assets/less/blocks/main-header.less
+++ b/resources/assets/less/blocks/main-header.less
@@ -102,6 +102,7 @@
 
 .main-header__notification-btn {
     margin-right: 35px;
+    padding: 0;
     .notification-btn__icon {
         height: 22px;
     }
