--- a/resources/assets/less/blocks/notification-item.less
+++ b/resources/assets/less/blocks/notification-item.less
@@ -26,15 +26,24 @@
     }
 }
 
-.notification-item__calendar {
-    margin-right: 23px;
+.notification-item__icon {
+    margin-right: 20px;
+    color: #76768e;
+    svg {
+        width: 20px;
+        height: 20px;
+    }
 }
 
-.notification-item__calendar-icon {
-    width: 21px;
-    height: 24px;
-    fill: #76768e;
-}
+//.notification-item__calendar {
+//    margin-right: 23px;
+//}
+
+//.notification-item__calendar-icon {
+//    width: 21px;
+//    height: 24px;
+//    fill: #76768e;
+//}
 
 .notification-item__text {
     margin-right: 23px;
