--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12834,7 +12834,7 @@ iframe.uk-cover {
   top: 0;
   right: 0;
   bottom: 0;
-  background: rgba(255, 255, 255, 0.4) url(/images/preloader.gif?0e8499c155e11d99bef4dff350cd42c6) no-repeat 50% 50%;
+  background: rgba(255, 255, 255, 0.4) url(/images/preloader.gif?1c288509f8d3119a9ae56b4ae661ca8a) no-repeat 50% 50%;
 }
 .preloader_absolute {
   position: absolute;
@@ -12850,7 +12850,7 @@ iframe.uk-cover {
       -ms-flex-pack: center;
           justify-content: center;
   min-height: 100vh;
-  background: #e3d4cc url(/images/autorization-bg.jpg?9938206b4f8a1f7aaff0e0ecce8c9cec) 50% 50% no-repeat;
+  background: #e3d4cc url(/images/autorization-bg.jpg?9f84258b9214829d917a10e020827864) 50% 50% no-repeat;
   background-size: cover;
 }
 .autorization__preloader {
@@ -13097,7 +13097,7 @@ iframe.uk-cover {
   position: absolute;
   top: -3px;
   left: 0;
-  background: url(/images/check-icon.svg?508ce9a3143f02116685abb794f1f774) 50% 50% no-repeat;
+  background: url(/images/check-icon.svg?3b82c6074cfbbec714296eba2f591ead) 50% 50% no-repeat;
   background-size: auto;
 }
 .autorization-form__checkbox:checked + .autorization-form__remember .autorization-form__checkbox-custom::before {
@@ -13177,7 +13177,7 @@ iframe.uk-cover {
   bottom: 5px;
   right: 0;
   z-index: 1;
-  background: #27272f url(/images/error-icon.svg?2faa81539fdb6cafb61eee4223173b9b) 50% 50% no-repeat;
+  background: #27272f url(/images/error-icon.svg?195091dcb1f2bd83c981bbdef09649c0) 50% 50% no-repeat;
   background-size: auto;
   border: 0;
   cursor: pointer;
@@ -13187,7 +13187,7 @@ iframe.uk-cover {
           animation: status-success 0.5s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
-  background: #27272f url(/images/success-icon.svg?948789bc840713fa66f8915070e1442b) 50% 50% no-repeat;
+  background: #27272f url(/images/success-icon.svg?b2873599a7cad075253f6d8a91c95c1c) 50% 50% no-repeat;
 }
 .info-danger__tooltip {
   width: 254px;
@@ -14403,7 +14403,7 @@ iframe.uk-cover {
   position: absolute;
   top: 50%;
   right: 78px;
-  background: url(/images/clip.png?a105b17ab3362e7f669c16207d675c1f) no-repeat 50% 50%;
+  background: url(/images/clip.png?96661bf3818262595bb7fa68f02eebe2) no-repeat 50% 50%;
   background-size: cover;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -15444,6 +15444,7 @@ iframe.uk-cover {
 }
 .subsection__lessons {
   margin-bottom: 34px;
+  margin-top: 34px;
 }
 .lessons {
   max-width: 928px;
@@ -16302,7 +16303,7 @@ iframe.uk-cover {
   margin-right: 30px;
   border: 0;
   border-bottom: 1px solid #cacaca;
-  background-image: url(/images/down-chevron.svg?8abef651addc535ad5907d8ed8c3fe6a);
+  background-image: url(/images/down-chevron.svg?891100f5b40bdd363e7a8813825c0ba5);
   color: #000000;
   font-size: 14px;
   font-weight: 700;
@@ -16375,7 +16376,7 @@ iframe.uk-cover {
   height: 120px;
   padding: 0;
   border: 0;
-  background: url(/images/bg-textarea.jpg?877f5e3858a8eba2ebda8849ce73442a) 0 0 repeat;
+  background: url(/images/bg-textarea.jpg?06e2a208df4bbabdaccfb4cb24c8ed0c) 0 0 repeat;
   background-size: auto;
   font-family: Roboto;
   font-size: 14px;
@@ -16440,7 +16441,7 @@ iframe.uk-cover {
   position: absolute;
   top: 1px;
   left: 1px;
-  background: url(/images/check-icon.svg?508ce9a3143f02116685abb794f1f774) 50% 50% no-repeat;
+  background: url(/images/check-icon.svg?3b82c6074cfbbec714296eba2f591ead) 50% 50% no-repeat;
   background-size: 14px 12px;
 }
 .editing__show-checkbox:checked + .editing__show-label .editing__show-checkbox-custom::before {
