--- a/resources/assets/less/blocks/indicator.less
+++ b/resources/assets/less/blocks/indicator.less
@@ -16,6 +16,9 @@
     &_isNotDone {
         background-color: #cacaca;
     }
+    &_isDanger {
+        background-color: #fd5e5e;
+    }
 }
 
 .indicator__tip {
