--- a/public/main.css
+++ b/public/main.css
@@ -13644,6 +13644,11 @@ iframe.uk-cover {
 .main-aside__link {
   display: flex;
   align-items: center;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  padding: 0;
+  font-family: inherit;
 }
 .main-aside__link:hover {
   text-decoration: none;
