--- a/resources/assets/less/blocks/main-aside.less
+++ b/resources/assets/less/blocks/main-aside.less
@@ -159,6 +159,11 @@
 .main-aside__link {
     display: flex;
     align-items: center;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    padding: 0;
+    font-family: inherit;
     &:hover {
         text-decoration: none;
         .main-aside__link-title {
