--- a/resources/assets/app/less/uikit.less
+++ b/resources/assets/app/less/uikit.less
@@ -1,5 +1,18 @@
 @import "~uikit/src/less/uikit.theme.less";
 
+@button-primary-background: #fdd95e;
+@button-primary-color: #27272f;
+@button-primary-hover-background: #ffe763;
+@button-primary-hover-color: #27272f;
+@button-primary-active-background: #ffe763;
+@button-primary-active-color: #27272f;
+@button-text-transform: none;
+@button-font-size: 14px;
+
 .uk-alert {
   white-space: pre;
+}
+
+.hook-button() {
+  border-radius: 3px;
 }
