--- a/resources/assets/app/less/blocks/practice.less
+++ b/resources/assets/app/less/blocks/practice.less
@@ -43,8 +43,9 @@
 }
 
 .practice__materials {
-    margin-bottom: 105px;
-    @media (max-width: @breakpoint-small) {
-        margin-bottom: 40px;
-    }
+    margin-bottom: 40px;
+    // margin-bottom: 105px;
+    // @media (max-width: @breakpoint-small) {
+    //     margin-bottom: 40px;
+    // }
 }
