--- a/resources/assets/app/less/blocks/main-aside.less
+++ b/resources/assets/app/less/blocks/main-aside.less
@@ -46,13 +46,16 @@
 .main-aside__structure {
     position: relative;
     display: block;
-    padding-left: 38px;
     color: #d8dfeb;
     font-size: 12px;
     font-weight: 300;
     line-height: 1.16;
     letter-spacing: 0.3px;
     padding-right: 30px;
+    background: transparent;
+    padding: 0 0 0 38px;
+    border: none;
+    cursor: pointer;
     &_close {
         color: #969ba1;
     }
