--- a/resources/assets/app/less/blocks/test.less
+++ b/resources/assets/app/less/blocks/test.less
@@ -32,6 +32,12 @@
   .uk-checkbox {
     margin-right: 10px;
   }
+  &_success {
+    background-color: #cbffcb;
+  }
+  &_danger {
+    background-color: #ffd3d3;
+  }
 }
 
 label.test-panel__list-item {
