--- a/resources/assets/app/less/blocks/notification-btn.less
+++ b/resources/assets/app/less/blocks/notification-btn.less
@@ -3,8 +3,13 @@
     border: 0;
     position: relative;
     background: transparent;
+    color: #cacaca;
+    display: inline-block;
     cursor: pointer;
+    transition: color 0.25s;
     &:hover {
+        color: #969da9;
+        text-decoration: none;
         .notification-btn__icon {
             fill: @icon-hover-color;
             transition: fill 0.25s;
