--- a/resources/assets/app/less/blocks/main-header.less
+++ b/resources/assets/app/less/blocks/main-header.less
@@ -100,7 +100,7 @@
     transition: fill 0.25s;
 }
 
-.main-header__notification-btn {
+.main-header {
     .notification-btn {
         margin-right: 35px;
         padding: 0;
